- Apply the stack limit separately to land, sea, and air units
- Option to exclude cities from the unit stack limit

- Allow perfume amounts to be specified as percentages
- Option to limit how many units can share each tile, named limit_units_per_tile
- Adjustable chance for max one HP units to be destroyed by nuclear strikes
  - Controlled by config option chance_for_nukes_to_destroy_max_one_hp_units
- Add limited_railroads_work_like_fast_roads option which does just that
- Option to allow sale of buildings like aqueducts that uncap population growth, named allow_sale_of_aqueducts_and_hospitals
- Option stopping non-sea detector units from revealing invisible sea units and vice-versa, named no_cross_shore_detection
- Fix charm flag controlling PTW arty targeting not working for reloaded games
- Fix building unit prereqs interfering with unit limits

* RELEASE 20
- Remove city improvement limit
  - Controlled by config option remove_city_improvement_limit
- Polish precision striking by cruise missiles
  - Now plays the correct animations and despawns the unit afterward
  - Controlled by the polish_precision_striking config option, which used to be named polish_non_air_precision_striking
- Enable cruise missiles to perform stealth attack bombard
- Add ability to perfume technologies and governments
  - Options named technology_perfume and government_perfume, respectively
  - The perfume_specs option from before has been renamed to production_perfume but the old name still works as an alias
- Fix bug related to "Disables Diseases From Flood Plains" tech flag
  - Option named patch_disease_stopping_tech_flag_bug, off by default b/c this fix causes a lot more disease under the standard rules
- Option to show unit hitpoints on the stealth attack target selection popup (named show_hp_of_stealth_attack_options in config)
- Option to have a warning when the building you've selected to build would replace another already built in the city