@@ -1,5 +1,6 @@
 - Apply the stack limit separately to land, sea, and air units
 - Option to exclude cities from the unit stack limit
+- Fix unit stack limit blocking combat
 
 - Allow perfume amounts to be specified as percentages
 - Option to limit how many units can share each tile, named limit_units_per_tile
